--- a/css/styles.css
+++ b/css/styles.css
@@ -155,10 +155,12 @@ td {
     border: 1px solid #6ead3a;
     box-sizing: border-box;
     pointer-events: none;
+    transition-duration: 0.1s;
 }
 
 .td_selection.active {
     display: block;
+    transition-duration: 0.1s;
 }
 
 
