--- a/css/styles.css
+++ b/css/styles.css
@@ -138,15 +138,10 @@ td {
 }
 
 
-/*td:focus:after {
-    content: '';
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    border: 1px solid #6ead3a;
-}*/
+td.selected {
+    background: rgba(110, 173, 58, 0.1);
+    
+}
 
 .td_selection {
     z-index: 999;
@@ -159,6 +154,46 @@ td {
 }
 
 .td_selection.active {
+    display: block;
+    /*transition-duration: 0.1s;*/
+}
+
+iframe {
+    width:100%;
+    height:100%;
+    position:absolute;
+    z-index:-1;
+    opacity: 0;
+}
+
+.fast {
+    z-index: 9999;
+    position: absolute;
+    display: none;
+    background: #6ead3a;
+    opacity: 25%;
+    box-sizing: border-box;
+    pointer-events: none;
+    /*transition-duration: 0.1s;*/
+}
+
+.fast.active {
+    display: block;
+    /*transition-duration: 0.1s;*/
+}
+
+.slow {
+    z-index: 9999;
+    position: absolute;
+    display: none;
+    background: #ff0000;
+    opacity: 25%;
+    box-sizing: border-box;
+    pointer-events: none;
+    /*transition-duration: 0.1s;*/
+}
+
+.slow.active {
     display: block;
     /*transition-duration: 0.1s;*/
 }
