--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ header a:hover {
     left: 5px;
     right: 5px;
     overflow: auto;
+    display: none;
     /*scroll-behavior: smooth;*/
 }
 
@@ -110,6 +111,7 @@ table {
     left: 5px;
     z-index: 99;
     position: fixed;
+    visibility: hidden;
 }
 
 .table_header,
@@ -157,8 +159,8 @@ td.selected, th.selected {
 }
 
 iframe {
-    width:100%;
-    height:100%;
+    width:50%;
+    height:50%;
     position:absolute;
     z-index:-1;
     opacity: 0;
@@ -194,6 +196,19 @@ iframe {
 .slow.active {
     display: block;
     /*transition-duration: 0.1s;*/
+}
+
+a.open_map {
+    float: right;
+    position: absolute;
+    color: #ceccce;
+    opacity: 0;
+    transition-duration: 0.3s;
+}
+
+a.open_map:hover {
+    color: #f4f8f9;
+    transition-duration: 0.3s;
 }
 
 
