--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
 
 header,
 footer {
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
     z-index: 9999;
     height: 35px;
     background: #4c4947;
@@ -101,6 +106,11 @@ table {
 }
 
 .table_header {
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
     top: 41px;
     right: 5px;
     left: 5px;
