--- a/css/styles_auth.css
+++ b/css/styles_auth.css
@@ -11,36 +11,63 @@
     width: 300px;
     margin: 0;
     transform: translate(-50%, -50%);
-    position: absolute; 
-    top: 50%; 
+    position: absolute;
+    top: 50%;
     left: 50%;
-    /*line-height: 35px;*/
 }
 
 .registration_form span {
     font-size: 11px;
     float: left;
+    width: 100%;
+    text-align: left;
     height: 0;
     opacity: 0;
-    /*display: none;*/
 }
 
-.registration_form span.active {
-    display: block;
+@keyframes show {
+    from {
+        height: 0;
+        opacity: 0;
+    }
+    to {
+        height: 15px;
+        opacity: 100%;
+    }
 }
 
-.registration_content 
-input[type="email"],
+@keyframes close {
+    from {
+        height: 15px;
+        opacity: 100%;
+    }
+    to {
+        height: 0;
+        opacity: 0;
+    }
+}
+
+.registration_form span.show {
+    animation: show ease-out 0.3s forwards;
+}
+
+.registration_form span.close {
+    animation: close ease-out 0.3s forwards;
+}
+
+.registration_content input[type="email"],
 input[type="text"],
-input[type="number"],
 input[type="password"] {
-    margin-top: 10px;
+    box-sizing: border-box;
     width: 100%;
 }
 
+.registration_content input {
+    margin-top: 10px;
+}
+
 input[type="email"],
 input[type="text"],
-input[type="number"],
 input[type="submit"],
 input[type="password"],
 button {
