--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ html::selection {
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;*/
-
 }
 
 body {
@@ -14,6 +13,17 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: #efedef;
     font-size: 14px;
+}
+
+.preloader {
+    background: #222022;
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 99999;
 }
 
 header,
