--- a/css/styles_auth.css
+++ b/css/styles_auth.css
@@ -1,4 +1,6 @@
-.registration, .login {
+.registration,
+.login,
+.verification {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -7,34 +9,48 @@
     text-align: center;
 }
 
-.registration_content, .login_content {
+.registration_content,
+.login_content,
+.verification_content {
     width: 300px;
     margin: 0;
     transform: translate(-50%, -50%);
     position: absolute;
     top: 50%;
     left: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
-.registration_form span, .login_form span{
+.login_form {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+}
+
+.registration_form span,
+.login_form span:not(.remember_me_span) {
     font-size: 11px;
     float: left;
     width: 100%;
     text-align: left;
-    height: 0;
-    opacity: 0;
+    /*height: 0;
+    opacity: 0;*/
 }
 
 .ver_span {
     font-size: 11px;
-    /*margin-bottom: 10px;*/
-    /*display: none;*/
-    max-height: 0;
-    opacity: 0;
+    margin-bottom: 10px;
+    display: none;
 }
 
 .ver_span.active {
     display: block;
+}
+
+.ver_e {
+    color: red;
 }
 
 .bd_e {
@@ -91,8 +107,8 @@ input[type="password"] {
     width: 100%;
 }
 
-input {
-    margin-top: 10px;
+input[type="submit"] {
+    min-width: 0;
 }
 
 input[type="email"],
@@ -102,9 +118,11 @@ input[type="password"],
 button {
     background: #222022;
     border: 1px solid #8b8c8e;
+    border-radius: 0px;
     color: #f4f8f9;
     font-size: 12px;
     padding: 5px;
+    margin-top: 10px;
     outline: none;
     font-family: 'Open Sans', sans-serif;
     opacity: 100%;
@@ -121,6 +139,51 @@ button:hover {
     background: #f4f8f9;
     color: #222022;
     cursor: pointer;
-    font-weight: bold;
     transition: 0.3s;
 }
+
+.remember_me_div {}
+
+input[type="checkbox"] {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+input[type="checkbox"]+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+
+input[type="checkbox"]+label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #8b8c8e;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+input[type="checkbox"]:checked+label::before {
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+
+/*.remember_me_label {
+    user-select: none;
+    margin-top: 10px;
+    width: 100%;
+}
+
+.remember_me_span {
+    font-size: 12px;
+    float: left;
+}*/
