--- a/css/styles_auth.css
+++ b/css/styles_auth.css
@@ -64,8 +64,11 @@
     color: red;
 }
 
-.bd_e {
+.bd_e, .send_email_e {
     color: red;
+}
+
+.send_email_e {
     margin-top: 10px;
 }
 
@@ -79,36 +82,6 @@
 .login_content a:hover {
     color: #f4f8f9;
     transition-duration: 0.3s;
-}
-
-@keyframes show {
-    from {
-        height: 0;
-        opacity: 0;
-    }
-    to {
-        height: 15px;
-        opacity: 100%;
-    }
-}
-
-@keyframes close {
-    from {
-        height: 15px;
-        opacity: 100%;
-    }
-    to {
-        height: 0;
-        opacity: 0;
-    }
-}
-
-span.show {
-    animation: show ease-out 0.3s forwards;
-}
-
-span.close {
-    animation: close ease-out 0.3s forwards;
 }
 
 input[type="email"],
