--- a/css/styles_set.css
+++ b/css/styles_set.css
@@ -18,7 +18,7 @@
     flex-direction: column;
 }
 
-.settings_content form {
+.settings_content form:not(.logout_form) {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
@@ -42,36 +42,6 @@ span.error {
     opacity: 0;
 }
 
-@keyframes show {
-    from {
-        height: 0;
-        opacity: 0;
-    }
-    to {
-        height: 15px;
-        opacity: 100%;
-    }
-}
-
-@keyframes close {
-    from {
-        height: 15px;
-        opacity: 100%;
-    }
-    to {
-        height: 0;
-        opacity: 0;
-    }
-}
-
-span.show {
-    animation: show ease-out 0.3s forwards;
-}
-
-span.close {
-    animation: close ease-out 0.3s forwards;
-}
-
 .bd_e {
     color: red;
     margin-top: 10px;
@@ -79,12 +49,13 @@ span.close {
 
 input[type="email"],
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="submit"] {
     box-sizing: border-box;
     width: 100%;
 }
 
-.settings_content input, .settings_content div {
+.settings_content input:not(.logout_button), .settings_content div {
     margin-top: 10px;
 }
 
