--- a/css/styles.css
+++ b/css/styles.css
@@ -59,28 +59,6 @@ body {
     }
 }
 
-@keyframes show {
-    from {
-        height: 0;
-        opacity: 0;
-    }
-    to {
-        height: 15px;
-        opacity: 100%;
-    }
-}
-
-@keyframes close {
-    from {
-        height: 15px;
-        opacity: 100%;
-    }
-    to {
-        height: 0;
-        opacity: 0;
-    }
-}
-
 span.show {
     animation: show ease-out 0.3s forwards;
 }
@@ -110,14 +88,24 @@ footer {
 header span {
     line-height: 35px;
     float: right;
-    clear: both;
     margin-right: 5px;
+}
+
+header ul {
+    padding: 0;
+	margin: 0;
+    list-style: none;
+    position: relative;
+}
+
+header ul li {
+    display: inline-block;
 }
 
 header a {
     transition-duration: 0.3s;
     line-height: 35px;
-    margin-left: 5px;
+    padding-left: 5px;
     text-decoration: none;
     color: #efedef;
 }
@@ -125,6 +113,29 @@ header a {
 header a:hover {
     transition-duration: 0.3s;
     color: #ceccce;
+}
+
+header ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+header ul ul a  {
+    width: 100%;
+    padding-right: 5px;
+}
+
+header ul li:hover > ul {
+    display: block;
+}
+
+/* первый уровень выпадающего списка */
+header ul ul li {
+    float: none;
+    display: list-item;
+    position: relative;
+    background: #4c4947;
 }
 
 .horiz_stub_up,
@@ -365,6 +376,16 @@ footer span {
     float: right;
     line-height: 35px;
     margin-right: 5px;
+    opacity: 0;
+}
+
+.span_footer.error {
+    color: red;
+}
+
+.span_footer.active {
+    opacity: 100%;
+    transition-duration: 0.3s;
 }
 
 .tabs {
