--- a/css/styles_calc.css
+++ b/css/styles_calc.css
@@ -198,6 +198,47 @@ header a:hover {
     margin: 0.5vh;
 }
 
+/*checkbox*/
+input[type="checkbox"] {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+input[type="checkbox"]+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    line-height: 1em;
+}
+
+input[type="checkbox"]+label::before {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #8b8c8e;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    transition: 0.3s;
+}
+
+input[type="checkbox"]:checked+label::before {
+    border-color: #6ead3a;
+    background-color: #6ead3a;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+    transition: 0.3s;
+}
+
+
+input[type="checkbox"]:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #6ead3a;
+    transition: 0.3s;
+}
+
 .search_div {
     overflow: auto;
     max-height: 15vh;
